2004-11-23  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-flush-pending-output): New variable.
	(gdb-send-item, gdb-resync, gud-gdba-marker-filter): Use it.

2004-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buff-menu.el (list-buffers-noselect): Re-add the leading space in the
	header-line when needed.
	Use fixed-pitch only in the header-line.
	Build the underline automatically.  Use emdash if available.

2004-11-22  Richard M. Stallman  <rms@gnu.org>

	* dired.el (dired-recursive-copies): Move from dired-aux.el.
	* dired-aux.el (dired-recursive-copies): Move to dired.el.

2004-11-22  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-resync): New function.
	(gdb-pre-prompt, gdb-prompt, gdb-starting, gdb-stopping)
	(gdb-frame-begin, gdb-stopped, gdb-post-prompt):
	Use it to fail more gracefully.
	(gdb-variables): Delete variable.
	Re-order variables to reduce byte-compiler warnings.

2004-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* descr-text.el (describe-char):
	* paren.el (show-paren-function):
	* subr.el (syntax-after): Undo last change.

	* progmodes/python.el (run-python): Don't hard code *Python*.
	Don't modify global process-environment.
	(python-send-region, python-load-file): Don't assume that
	python-buffer == (process-buffer (python-proc)).
	(python-switch-to-python): Simplify.

	* dired.el (dired-align-file): Don't assume line starts with spaces.

2004-11-21  Jay Belanger  <belanger@truman.edu>

	* calc/calc-ext.el (math-read-big-expr, math-read-big-bigp):
	Replace variable `lines' by math-read-big-lines.
	(math-read-big-expr): Replace variables the-baseline, the-h2
	and err-msg by math-read-big-baseline, math-read-big-h2 and
	math-read-err-msg.
	(math-read-big-bigp): Replace variable h2 with math-rb-h2.

	* calc/calc-lang.el (math-read-big-rec): Fix typo.
	(math-read-big-balance): Replace unbound variable by value.
	(math-read-big-lines): New variable.